<resources>
    <string name="app_name">Wagba</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="signup_login">Don\'t have an account? Sign Up</string>
    <string name="login_signup">Already have an account? Login</string>
    <string name="signupwith">Sign up with</string>
    <string name="loginwith">Login with</string>
    <string name="previous">Previous</string>
    <string name="company_name">Wagba</string>
    <string name="company_desc">A food delivery application.</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="login_email">Enter your email</string>
    <string name="login_password">Enter your password</string>
    <string name="signup">Sign up</string>
    <string-array name="restaurant_names">
        <item>Abo Anas</item>
        <item>El Dahan</item>
        <item>More IN</item>
        <item>Deep Shawerma</item>
        <item>Ibn El Sham</item>
        <item>Broccar</item>
        <item>McDonalds</item>
        <item>Cinnabon</item>
        <item>Krispy Cream</item>
        <item>Coffee Lab</item>
        <item>Abo Ammar</item>
        <item>Abo Mazen</item>
        <item>Bab Sharqi</item>
        <item>Ahsn Nas</item>
        <item>Bazooka</item>
        <item>Heart Attack</item>
        <item>Pasta2Go</item>
        <item>Kingdom Pizza</item>
        <item>Double Ds</item>
        <item>City Crepe</item>
    </string-array>
    <string-array name="restaurant_categories">
        <item>Shawerma</item>
        <item>Egyptian</item>
        <item>Western</item>
        <item>Shawerma</item>
        <item>Shawerma</item>
        <item>Shawerma</item>
        <item>Western</item>
        <item>Desserts</item>
        <item>Desserts</item>
        <item>Coffee</item>
        <item>Shawerma</item>
        <item>Shawerma</item>
        <item>Shawerma</item>
        <item>Shawerma</item>
        <item>Fried Chicken</item>
        <item>Fried Chicken</item>
        <item>Pasta</item>
        <item>Pizza</item>
        <item>Pizza</item>
        <item>Crepe</item>
    </string-array>
    <string-array name="restaurant_dishes">
        <item>Chicken Shawerma</item>
        <item>Chichken Burger</item>
        <item>Chicken Thigh</item>
        <item>Chicken Breast</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dish_name">dish_name</string>
    <string name="dish_price">dish_price</string>
    <string name="cart">Cart</string>
    <string name="history">History</string>
    <string name="home">Home</string>
    <string name="order_total_price">order_total_price</string>
    <string name="restaurant_name">restaurant_name</string>
    <string name="order_date">order_date</string>
    <string name="order_number">order_number</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="tracking">Tracking</string>
    <string name="profile">Profile</string>
    <string name="remove">Remove</string>
    <string name="price">price:</string>
</resources>