<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/splash_screen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/beige_light"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/login_companyName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/pacifico"
        android:text="@string/company_name"
        android:textColor="@color/dark_red"
        android:textSize="72sp" />

    <TextView
        android:id="@+id/login_companyDesc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="16dp"
        android:text="@string/company_desc" />

    <TextView
        android:id="@+id/email_txtView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email" />

    <EditText
        android:id="@+id/email_editTxt2"
        android:layout_width="223dp"
        android:layout_height="48dp"
        android:background="@drawable/layout_border"
        android:ems="10"
        android:hint="Enter your email address"
        android:inputType="textEmailAddress"
        android:paddingLeft="10sp"
        android:paddingRight="10sp" />

    <TextView
        android:id="@+id/pw_txtView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password" />

    <EditText
        android:id="@+id/pw_editTxt2"
        android:layout_width="223dp"
        android:layout_height="48dp"
        android:layout_marginBottom="16dp"
        android:autofillHints=""
        android:background="@drawable/layout_border"
        android:ems="10"
        android:hint="@string/enter_your_password"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:paddingLeft="10sp"
        android:paddingRight="10sp" />

    <Button
        android:id="@+id/signup2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#ECC2C2"
        android:gravity="center"
        android:minHeight="48dp"
        android:text="@string/signup"
        android:textColor="@color/beige_light"
        android:textColorHighlight="#000000"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/signUp_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/login_signup" />

    <Button
        android:id="@+id/loginBtn_SignUpPage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login" />

</LinearLayout>