<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/splash_screen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/beige_light"
    tools:context=".MainActivity"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="-2dp">

    <TextView
        android:id="@+id/login_companyName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="92dp"
        android:fontFamily="@font/pacifico"
        android:text="@string/company_name"
        android:textColor="@color/dark_red"
        android:textSize="72sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/login_companyDesc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/company_desc"
        app:layout_constraintEnd_toEndOf="@+id/login_companyName"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="@+id/login_companyName"
        app:layout_constraintTop_toBottomOf="@+id/login_companyName" />

    <Button
        android:id="@+id/loginBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="176dp"
        android:background="#ECC2C2"
        android:text="@string/login"
        android:textColor="@color/beige_light"
        android:textColorHighlight="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.479"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="TextContrastCheck"
        tools:text="Login" />

    <TextView
        android:id="@+id/signUp_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/signup_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginBtn" />

    <EditText
        android:id="@+id/email_editTxt"
        android:layout_width="223dp"
        android:layout_height="48dp"
        android:layout_marginTop="44dp"
        android:background="@drawable/layout_border"
        android:ems="10"
        android:hint="Enter your email address"
        android:inputType="textEmailAddress"
        android:paddingLeft="10sp"
        android:paddingRight="10sp"
        app:layout_constraintEnd_toEndOf="@+id/login_companyName"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/login_companyName"
        app:layout_constraintTop_toBottomOf="@+id/login_companyDesc" />

    <EditText
        android:id="@+id/pw_editTxt"
        android:layout_width="223dp"
        android:layout_height="48dp"
        android:layout_marginTop="48dp"
        android:background="@drawable/layout_border"
        android:ems="10"
        android:hint="@string/enter_your_password"
        android:inputType="textPassword"
        android:paddingLeft="10sp"
        android:paddingRight="10sp"
        app:layout_constraintBottom_toTopOf="@+id/loginBtn"
        app:layout_constraintEnd_toEndOf="@+id/email_editTxt"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/email_editTxt"
        app:layout_constraintTop_toBottomOf="@+id/email_editTxt"
        app:layout_constraintVertical_bias="0.046" />

    <TextView
        android:id="@+id/pw_txtView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"
        app:layout_constraintBottom_toTopOf="@+id/pw_editTxt"
        app:layout_constraintEnd_toEndOf="@+id/email_editTxt"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/email_editTxt"
        app:layout_constraintTop_toBottomOf="@+id/email_editTxt"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/email_txtView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"
        app:layout_constraintBottom_toTopOf="@+id/email_editTxt"
        app:layout_constraintEnd_toEndOf="@+id/email_editTxt"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/email_editTxt"
        app:layout_constraintTop_toBottomOf="@+id/login_companyDesc"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/SignUp_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signup"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/signUp_login"
        app:layout_constraintStart_toStartOf="@+id/signUp_login"
        app:layout_constraintTop_toBottomOf="@+id/signUp_login"
        app:layout_constraintVertical_bias="0.175" />

</androidx.constraintlayout.widget.ConstraintLayout>