<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:elevation="8dp">

    <androidx.cardview.widget.CardView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginVertical="20dp"
        app:cardBackgroundColor="@color/sky"
        app:cardCornerRadius="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.39"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="87dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="178dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="20sp"
                android:layout_weight="30"
                android:orientation="vertical"
                android:paddingTop="5sp"
                android:weightSum="70">

                <TextView
                    android:id="@+id/order_number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="10"
                    android:fontFamily="@font/rubik_light"
                    android:text="@string/order_number"
                    android:textColor="@color/dark_red_light"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/order_total_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="10"
                    android:fontFamily="@font/rubik_light"
                    android:text="@string/order_total_price"
                    android:textColor="@color/dark_red_light"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/order_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="10"
                    android:fontFamily="@font/rubik_light"
                    android:text="@string/order_date"
                    android:textColor="@color/dark_red_light"
                    android:textSize="10sp" />

            </LinearLayout>

            <ImageView
                android:id="@+id/restaurant_icon"
                android:layout_width="92dp"
                android:layout_height="92dp"
                android:layout_weight="70"
                app:srcCompat="@drawable/ic_baseline_restaurant_24" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>