<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/order_activity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/beige_light">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/order_details_wrapper"
        android:layout_width="0dp"
        android:layout_height="270dp"
        android:layout_weight="35"
        android:background="@drawable/layout_border"
        app:layout_constraintBottom_toTopOf="@+id/order_summary_wrapper"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/order_meta_wrapper"
            android:layout_width="214dp"
            android:layout_height="0dp"
            android:layout_margin="10sp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.994"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0">

            <TextView
                android:id="@+id/restaurant_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="25"
                android:fontFamily="@font/rubik_light"
                android:text="@string/restaurant_name"
                android:textColor="@color/dark_red"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/order_number"
                android:layout_width="161dp"
                android:layout_height="wrap_content"
                android:layout_weight="25"
                android:fontFamily="@font/rubik_light"
                android:text="@string/order_number"
                android:textColor="@color/dark_red_light"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/order_date"
                android:layout_width="163dp"
                android:layout_height="wrap_content"
                android:layout_weight="25"
                android:fontFamily="@font/rubik_light"
                android:text="@string/order_date"
                android:textColor="@color/dark_red_light"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/order_total_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="25"
                android:fontFamily="@font/rubik_light"
                android:text="@string/order_total_price"
                android:textColor="@color/dark_red_light"
                android:textSize="20sp" />

        </LinearLayout>

        <ImageView
            android:id="@+id/restaurant_icon"
            android:layout_width="107dp"
            android:layout_height="114dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.051"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.097"
            app:srcCompat="@drawable/ic_baseline_restaurant_24" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/order_summary_wrapper"
        android:layout_width="400dp"
        android:layout_height="372dp"
        android:layout_marginStart="4dp"
        android:layout_weight="65"
        android:background="@drawable/layout_border"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.88">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="259dp"
            android:layout_margin="20dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/order_summary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="20sp"
                android:layout_weight="15"
                android:text="order_summary"
                android:textColor="@color/dark_red"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/order_details"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20sp"
                android:layout_weight="85"
                android:text="order_details"
                android:textColor="@color/dark_red" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>