<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.TrackingFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/order_details_wrapper"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="35"
            android:background="@drawable/layout_border"
            app:layout_constraintBottom_toTopOf="@+id/order_summary_wrapper"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:id="@+id/order_meta_wrapper"
                android:layout_width="214dp"
                android:layout_height="0dp"
                android:layout_margin="10sp"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.994"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0">

                <TextView
                    android:id="@+id/restaurant_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="25"
                    android:fontFamily="@font/rubik_light"
                    android:text="@string/restaurant_name"
                    android:textColor="@color/dark_red"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/order_number"
                    android:layout_width="161dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="25"
                    android:fontFamily="@font/rubik_light"
                    android:text="@string/order_number"
                    android:textColor="@color/dark_red_light"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/order_date"
                    android:layout_width="163dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="25"
                    android:fontFamily="@font/rubik_light"
                    android:text="@string/order_date"
                    android:textColor="@color/dark_red_light"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/order_total_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="25"
                    android:fontFamily="@font/rubik_light"
                    android:text="@string/order_total_price"
                    android:textColor="@color/dark_red_light"
                    android:textSize="20sp" />

            </LinearLayout>

            <ImageView
                android:id="@+id/restaurant_icon"
                android:layout_width="107dp"
                android:layout_height="114dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.051"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.097"
                app:srcCompat="@drawable/ic_baseline_restaurant_24" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10sp"
            android:layout_marginBottom="10sp"
            android:layout_weight="35"
            android:background="@drawable/layout_border"
            android:orientation="vertical"
            android:padding="10sp">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/layout_border">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/order_items_rcv"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    tools:listitem="@layout/order_item" />
            </androidx.cardview.widget.CardView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="35"
            android:background="@drawable/layout_border"
            android:orientation="vertical"
            android:paddingLeft="10sp"
            android:paddingTop="10sp">

            <TextView
                android:id="@+id/order_status_txtView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Order Status"
                android:textColor="@color/dark_red"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/order_status"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="order_status" />
        </LinearLayout>
    </LinearLayout>

</FrameLayout>